--- a/src/CombatAnalysis.App/Localizations/Resources/BasicTemplate/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/BasicTemplate/Resource.resx
@@ -117,7 +117,85 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AllCombats" xml:space="preserve">
+    <value>All combats</value>
+  </data>
+  <data name="Chat" xml:space="preserve">
+    <value>Chat</value>
+  </data>
+  <data name="ChatLoginRequired" xml:space="preserve">
+    <value>To open the 'Chat" you need to login</value>
+  </data>
+  <data name="CloseWindow" xml:space="preserve">
+    <value>Close a window</value>
+  </data>
+  <data name="Combat" xml:space="preserve">
+    <value>Combat</value>
+  </data>
+  <data name="Damage" xml:space="preserve">
+    <value>Damage</value>
+  </data>
+  <data name="DamageTaken" xml:space="preserve">
+    <value>Damage taken</value>
+  </data>
+  <data name="Exit" xml:space="preserve">
+    <value>Exit</value>
+  </data>
+  <data name="Fail" xml:space="preserve">
+    <value>Fail</value>
+  </data>
+  <data name="FullScreenWindow" xml:space="preserve">
+    <value>Full screen</value>
+  </data>
+  <data name="Healing" xml:space="preserve">
+    <value>Healing</value>
+  </data>
+  <data name="Home" xml:space="preserve">
+    <value>Home</value>
+  </data>
   <data name="Language" xml:space="preserve">
     <value>Language</value>
+  </data>
+  <data name="Loading" xml:space="preserve">
+    <value>Loading...</value>
+  </data>
+  <data name="LoadingDescribe" xml:space="preserve">
+    <value>Being loading data. This may take a long time. You could continue using the application.</value>
+  </data>
+  <data name="LoadingFail" xml:space="preserve">
+    <value>Loading failed. This must have been due to connection or server issues. You can continue to use the current data, but this data will not be saved.</value>
+  </data>
+  <data name="LoadingSuccess" xml:space="preserve">
+    <value>Success. All data saved.</value>
+  </data>
+  <data name="Login" xml:space="preserve">
+    <value>Login</value>
+  </data>
+  <data name="Logout" xml:space="preserve">
+    <value>Logout</value>
+  </data>
+  <data name="Logs" xml:space="preserve">
+    <value>Logs</value>
+  </data>
+  <data name="MinimazeWindow" xml:space="preserve">
+    <value>Minimaze</value>
+  </data>
+  <data name="Profile" xml:space="preserve">
+    <value>Profile</value>
+  </data>
+  <data name="Registration" xml:space="preserve">
+    <value>Registration</value>
+  </data>
+  <data name="Resources" xml:space="preserve">
+    <value>Resources</value>
+  </data>
+  <data name="Settings" xml:space="preserve">
+    <value>Settings</value>
+  </data>
+  <data name="Success" xml:space="preserve">
+    <value>Success</value>
+  </data>
+  <data name="Upload" xml:space="preserve">
+    <value>Upload</value>
   </data>
 </root>
