--- a/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.ru.resx
@@ -117,7 +117,70 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Language" xml:space="preserve">
-    <value>Язык</value>
+  <data name="Analyzing" xml:space="preserve">
+    <value>Анализ</value>
+  </data>
+  <data name="File" xml:space="preserve">
+    <value>Файл:</value>
+  </data>
+  <data name="Loading" xml:space="preserve">
+    <value>Загрузка...</value>
+  </data>
+  <data name="LoadingFailed" xml:space="preserve">
+    <value>Ошибка загрузки</value>
+  </data>
+  <data name="Private" xml:space="preserve">
+    <value>Приватные</value>
+  </data>
+  <data name="PrivateLogs" xml:space="preserve">
+    <value>Личные логи</value>
+  </data>
+  <data name="PrivateLogsLoginRequired" xml:space="preserve">
+    <value>Для просмотра 'Личные логи' необходимо авторизоваться</value>
+  </data>
+  <data name="Processing" xml:space="preserve">
+    <value>Работа с данными...</value>
+  </data>
+  <data name="ProcessingFailed" xml:space="preserve">
+    <value>Ошибка: файл поврежден или не поддерживается</value>
+  </data>
+  <data name="Public" xml:space="preserve">
+    <value>Публичные</value>
+  </data>
+  <data name="PublicLogs" xml:space="preserve">
+    <value>Публичные логи</value>
+  </data>
+  <data name="RefreshLogs" xml:space="preserve">
+    <value>Обновление списка загруженных логов.</value>
+  </data>
+  <data name="RemovePrivateLog" xml:space="preserve">
+    <value>Удалить выбранный лог без возможности восстановить.</value>
+  </data>
+  <data name="SaveData" xml:space="preserve">
+    <value>Сохранить данные</value>
+  </data>
+  <data name="SaveDataDescribe" xml:space="preserve">
+    <value>Сохранение данных позволяет просматривать данные в будущем и делиться с другими пользователями.</value>
+  </data>
+  <data name="SelectFile" xml:space="preserve">
+    <value>Выбрать файл</value>
+  </data>
+  <data name="Title" xml:space="preserve">
+    <value>Получение информации о бое</value>
+  </data>
+  <data name="TypeOfLogs" xml:space="preserve">
+    <value>Тип логов</value>
+  </data>
+  <data name="TypeOfLogsLoginRequired" xml:space="preserve">
+    <value>Для выбора типа логов необходимо авторизоваться</value>
+  </data>
+  <data name="Upload" xml:space="preserve">
+    <value>Загрузить</value>
+  </data>
+  <data name="UploadFile" xml:space="preserve">
+    <value>Загрузить файл с данными о бое</value>
+  </data>
+  <data name="WithoutUser" xml:space="preserve">
+    <value>Без привязки к игроку</value>
   </data>
 </root>
