--- a/src/CombatAnalysis.App/Localizations/Resources/DamageDoneDetails/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/DamageDoneDetails/Resource.resx
@@ -126,6 +126,9 @@
   <data name="CountOfSkills" xml:space="preserve">
     <value>Count of skills</value>
   </data>
+  <data name="CritDamage" xml:space="preserve">
+    <value>Crit damage</value>
+  </data>
   <data name="Damage" xml:space="preserve">
     <value>Damage</value>
   </data>
