--- a/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.resx
@@ -120,6 +120,12 @@
   <data name="Analyzing" xml:space="preserve">
     <value>Analyzing</value>
   </data>
+  <data name="Combat" xml:space="preserve">
+    <value>Combat</value>
+  </data>
+  <data name="Dungeon" xml:space="preserve">
+    <value>Dungeon</value>
+  </data>
   <data name="File" xml:space="preserve">
     <value>File:</value>
   </data>
@@ -156,6 +162,9 @@
   <data name="RemovePrivateLog" xml:space="preserve">
     <value>Remove the selected log without the posibl of recovering of removed data.</value>
   </data>
+  <data name="Result" xml:space="preserve">
+    <value>Result</value>
+  </data>
   <data name="SaveData" xml:space="preserve">
     <value>Save data</value>
   </data>
@@ -164,6 +173,9 @@
   </data>
   <data name="SelectFile" xml:space="preserve">
     <value>Select file</value>
+  </data>
+  <data name="Time" xml:space="preserve">
+    <value>Time</value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>Get information about combats</value>
