--- a/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.ru.resx
@@ -120,6 +120,12 @@
   <data name="Analyzing" xml:space="preserve">
     <value>Анализ</value>
   </data>
+  <data name="Combat" xml:space="preserve">
+    <value>Бой</value>
+  </data>
+  <data name="Dungeon" xml:space="preserve">
+    <value>Подземелье</value>
+  </data>
   <data name="File" xml:space="preserve">
     <value>Файл:</value>
   </data>
@@ -156,6 +162,9 @@
   <data name="RemovePrivateLog" xml:space="preserve">
     <value>Удалить выбранный лог без возможности восстановить.</value>
   </data>
+  <data name="Result" xml:space="preserve">
+    <value>Результат</value>
+  </data>
   <data name="SaveData" xml:space="preserve">
     <value>Сохранить данные</value>
   </data>
@@ -164,6 +173,9 @@
   </data>
   <data name="SelectFile" xml:space="preserve">
     <value>Выбрать файл</value>
+  </data>
+  <data name="Time" xml:space="preserve">
+    <value>Время</value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>Получение информации о бое</value>
