Update lozalization for Web app

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/mainInformation.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/mainInformation.json
@@ -1,5 +1,5 @@
 {
   "Logs": "Логи боев",
-  "Analyzing": "Аналз",
+  "Analyzing": "Анализ",
   "NeedToAddSomething": "Необходимо добавить как минимум 1 элемент."
 }
