Fix Web app localization

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails.json
@@ -5,5 +5,7 @@
   "Player": "Player",
   "SelectInterval": "Select interval",
   "StartOfInterval": "Start of interval",
-  "FinishOfInterval": "Finish of interval"
+  "FinishOfInterval": "Finish of interval",
+  "Time": "Time",
+  "Cancel": "Cancel"
 }
