Move save the all data to API

--- a/src/CombatAnalysis.App/Localizations/Resources/DetailsGeneralTemplate/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/DetailsGeneralTemplate/Resource.resx
@@ -117,94 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AverageValue" xml:space="preserve">
-    <value>Ср. значение</value>
-  </data>
-  <data name="Common" xml:space="preserve">
-    <value>Общий</value>
-  </data>
-  <data name="CountOfSkills" xml:space="preserve">
-    <value>Примен. закл.</value>
-  </data>
-  <data name="CritDamage" xml:space="preserve">
-    <value>Крит. урон</value>
-  </data>
-  <data name="Damage" xml:space="preserve">
-    <value>Урон</value>
-  </data>
-  <data name="DamagePerSec" xml:space="preserve">
-    <value>Урон в сек.</value>
-  </data>
-  <data name="Dodge" xml:space="preserve">
-    <value>Уклонение</value>
-  </data>
-  <data name="Immune" xml:space="preserve">
-    <value>Иммун</value>
-  </data>
-  <data name="MaxValue" xml:space="preserve">
-    <value>Макс. значение</value>
-  </data>
-  <data name="MinValue" xml:space="preserve">
-    <value>Мин. значение</value>
-  </data>
-  <data name="Miss" xml:space="preserve">
-    <value>Промах</value>
-  </data>
-  <data name="MoreDetails" xml:space="preserve">
-    <value>Подробнее</value>
-  </data>
-  <data name="Parry" xml:space="preserve">
-    <value>Парирование</value>
-  </data>
-  <data name="PeriodicDamage" xml:space="preserve">
-    <value>Периодический урон</value>
-  </data>
-  <data name="Player" xml:space="preserve">
-    <value>Игрок</value>
-  </data>
-  <data name="Resist" xml:space="preserve">
-    <value>Сопротивление</value>
-  </data>
-  <data name="ShowCritDamage" xml:space="preserve">
-    <value>Показать крит</value>
-  </data>
-  <data name="ShowDodge" xml:space="preserve">
-    <value>Показать уклонение</value>
-  </data>
-  <data name="ShowFilters" xml:space="preserve">
-    <value>Показать фильтры</value>
-  </data>
-  <data name="ShowImmune" xml:space="preserve">
-    <value>Показать иммун</value>
-  </data>
-  <data name="ShowMiss" xml:space="preserve">
-    <value>Показать промахи</value>
-  </data>
-  <data name="ShowParry" xml:space="preserve">
-    <value>Показать парирование</value>
-  </data>
-  <data name="ShowResist" xml:space="preserve">
-    <value>Показать сопр.</value>
-  </data>
-  <data name="Source" xml:space="preserve">
-    <value>Источник</value>
-  </data>
-  <data name="Status" xml:space="preserve">
-    <value>Статус</value>
-  </data>
-  <data name="Target" xml:space="preserve">
-    <value>Цель</value>
-  </data>
-  <data name="Time" xml:space="preserve">
-    <value>Время</value>
-  </data>
-  <data name="Title" xml:space="preserve">
-    <value>Анализ нанесенного урона</value>
-  </data>
-  <data name="Total" xml:space="preserve">
-    <value>Всего:</value>
-  </data>
-  <data name="TypeOf" xml:space="preserve">
-    <value>Тип</value>
+  <data name="All" xml:space="preserve">
+    <value>All</value>
   </data>
 </root>
