--- a/src/CombatAnalysis.App/Localizations/Resources/GeneralAnalysis/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/GeneralAnalysis/Resource.resx
@@ -129,6 +129,9 @@
   <data name="Deaths" xml:space="preserve">
     <value>Deaths</value>
   </data>
+  <data name="Defeat" xml:space="preserve">
+    <value>Defeat</value>
+  </data>
   <data name="Enemy" xml:space="preserve">
     <value>Enemy</value>
   </data>
@@ -137,6 +140,15 @@
   </data>
   <data name="LoadingFailed" xml:space="preserve">
     <value>We couldn't save your data. Repeat?</value>
+  </data>
+  <data name="NotReady" xml:space="preserve">
+    <value>Not ready</value>
+  </data>
+  <data name="Ready" xml:space="preserve">
+    <value>Ready</value>
+  </data>
+  <data name="Refresh" xml:space="preserve">
+    <value>Refresh</value>
   </data>
   <data name="Repeat" xml:space="preserve">
     <value>Repeat</value>
@@ -149,5 +161,8 @@
   </data>
   <data name="Title" xml:space="preserve">
     <value>Analyzing</value>
+  </data>
+  <data name="Win" xml:space="preserve">
+    <value>Win</value>
   </data>
 </root>
