--- a/src/CombatAnalysis.App/Localizations/Resources/GeneralAnalysis/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/GeneralAnalysis/Resource.ru.resx
@@ -129,6 +129,9 @@
   <data name="Deaths" xml:space="preserve">
     <value>Смертей</value>
   </data>
+  <data name="Defeat" xml:space="preserve">
+    <value>Поражение</value>
+  </data>
   <data name="Enemy" xml:space="preserve">
     <value>Противник</value>
   </data>
@@ -137,6 +140,15 @@
   </data>
   <data name="LoadingFailed" xml:space="preserve">
     <value>Нам не удалось сохранить ваши данные. Повторить?</value>
+  </data>
+  <data name="NotReady" xml:space="preserve">
+    <value>Не загружен</value>
+  </data>
+  <data name="Ready" xml:space="preserve">
+    <value>Загружен</value>
+  </data>
+  <data name="Refresh" xml:space="preserve">
+    <value>Обновить</value>
   </data>
   <data name="Repeat" xml:space="preserve">
     <value>Повторить</value>
@@ -149,5 +161,8 @@
   </data>
   <data name="Title" xml:space="preserve">
     <value>Анализ</value>
+  </data>
+  <data name="Win" xml:space="preserve">
+    <value>Победа</value>
   </data>
 </root>
