--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/generalAnalysis.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/generalAnalysis.json
@@ -12,5 +12,8 @@
   "MoreDetails": "Подробнее",
   "MainPage": "Главная страница",
   "Combats": "Бои",
-  "NeedToAddSomething": "Необходимо добавить как минимум 1 элемент."
+  "NeedToAddSomething": "Необходимо добавить как минимум 1 элемент.",
+  "Ready": "Готово",
+  "NotReady": "Не готово",
+  "NeedWait": "Необходимо дождать пока бой будет готов к осмотру"
 }
