--- a/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.ru.resx
@@ -126,6 +126,9 @@
   <data name="Dungeon" xml:space="preserve">
     <value>Подземелье</value>
   </data>
+  <data name="Empty" xml:space="preserve">
+    <value>Пусто</value>
+  </data>
   <data name="File" xml:space="preserve">
     <value>Файл:</value>
   </data>
