--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/generalAnalysis.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/generalAnalysis.json
@@ -12,5 +12,8 @@
   "MoreDetails": "More details",
   "MainPage": "Main page",
   "Combats": "Combats",
-  "NeedToAddSomething": "Need to add at least 1 item."
+  "NeedToAddSomething": "Need to add at least 1 item.",
+  "Ready": "Ready",
+  "NotReady": "Not ready",
+  "NeedWait": "You have to wait until the fight is ready to inspection"
 }
