--- a/src/CombatAnalysis.App/Localizations/Resources/Chat/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/Chat/Resource.resx
@@ -126,6 +126,9 @@
   <data name="AttachDocument" xml:space="preserve">
     <value>Attach document</value>
   </data>
+  <data name="Close" xml:space="preserve">
+    <value>Close</value>
+  </data>
   <data name="Copy" xml:space="preserve">
     <value>Copy</value>
   </data>
