--- a/src/CombatAnalysis.App/Localizations/Resources/Chat/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/Chat/Resource.ru.resx
@@ -168,6 +168,9 @@
   <data name="RemoveUser" xml:space="preserve">
     <value>Удалить пользователя</value>
   </data>
+  <data name="SaveEdit" xml:space="preserve">
+    <value>Сохранить изменения</value>
+  </data>
   <data name="SearchUser" xml:space="preserve">
     <value>Поиск игрока</value>
   </data>
