--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/account/login.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/account/login.json
@@ -2,5 +2,6 @@
   "Email": "Email",
   "Password": "Пароль",
   "CheckMeOut": "Оставаться в системе",
-  "IncorrectData": "Неправильный email/пароль. Попробуйте еще раз"
+  "IncorrectData": "Неправильный email/пароль. Попробуйте еще раз",
+  "Login": "Войти"
 }
