Add finish localization for web app

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/account/registration.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/account/registration.json
@@ -3,5 +3,6 @@
   "Password": "Password",
   "CheckMeOut": "Check me out",
   "EmailExist": "This Email already reg!",
-  "Registration": "Registration"
+  "Registration": "Registration",
+  "Username": "Username"
 }
