--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/createGroupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/createGroupChat.json
@@ -6,7 +6,7 @@
   "ChatPolicy": "Chat policy",
   "Public": "Public",
   "Private": "Private",
-  "PrivateWithLink": "Private with link",
+  "PrivateWithLink": "Private (with link)",
   "Create": "Create",
   "Close": "Close"
 }
