--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/account/registration.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/account/registration.json
@@ -3,5 +3,6 @@
   "Password": "Пароль",
   "CheckMeOut": "Оставаться в системе",
   "EmailExist": "Такой Email уже зарегистрирован!",
-  "Registration": "Регистрация"
+  "Registration": "Регистрация",
+  "Username": "Имя пользователя"
 }
