Add transaction for remove GroupChat

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/groupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/groupChat.json
@@ -6,5 +6,6 @@
   "ShowDocuments": "Show documents",
   "LeaveFromChat": "Leave from chat",
   "SendMessage": "Send message",
-  "TypeYourMessage": "Type your message"
+  "TypeYourMessage": "Type your message",
+  "RemoveChat": "Remove chat"
 }
