--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/groupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/groupChat.json
@@ -6,5 +6,6 @@
   "ShowDocuments": "Показать окументы",
   "LeaveFromChat": "Выйти из чата",
   "SendMessage": "Отправить сообщение",
-  "TypeYourMessage": "Напишите ваше сообщение"
+  "TypeYourMessage": "Напишите ваше сообщение",
+  "RemoveChat": "Удалить чат"
 }
