--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/myEnvironment/myCommunities.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/myEnvironment/myCommunities.json
@@ -3,5 +3,7 @@
   "Refresh": "Обновить",
   "MyCommunitites": "Мои сообщества",
   "Hide": "Скрыть",
-  "Show": "Показать"
+  "Show": "Показать",
+  "Search": "Поиск",
+  "TypeCommunityName": "Напишите название сообщества"
 }
