--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/myEnvironment/myCommunities.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/myEnvironment/myCommunities.json
@@ -3,5 +3,7 @@
   "Refresh": "Refresh",
   "MyCommunitites": "My communitites",
   "Hide": "Hide",
-  "Show": "Show"
+  "Show": "Show",
+  "Search": "Search",
+  "TypeCommunityName": "Type community name"
 }
