Add special menu for communication

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/communication.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/communication.json
@@ -4,5 +4,11 @@
   "Communities": "Communities",
   "Events": "Events",
   "People": "People",
-  "MyEnvironment": "My environment"
+  "MyEnvironment": "My environment",
+  "Profile": "Profile",
+  "Friends": "Friends",
+  "Recomendations": "Recomendations",
+  "MyPosts": "My posts",
+  "CreateChat": "Create chat",
+  "CreateCommunity": "Create community"
 }
