--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/account/login.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/account/login.json
@@ -3,5 +3,6 @@
   "Password": "Пароль",
   "CheckMeOut": "Оставаться в системе",
   "IncorrectData": "Неправильный email/пароль. Попробуйте еще раз",
-  "Login": "Войти"
+  "Login": "Войти",
+  "RememberMe": "Запомнить меня"
 }
