--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/addPeople.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/addPeople.json
@@ -1,5 +1,5 @@
 {
-  "AddNewPeople": "Добавить пользователя",
+  "SearchPeople": "Поиск пользователей",
   "SentInvite": "Вы отправили приглашение",
   "Friends": "Друзья",
   "Hide": "Скрыть",
@@ -9,6 +9,6 @@
   "More": "Больше",
   "Less": "Меньше",
   "AnotherPeople": "Другие пользователи",
-  "SendInviteToCommunity": "Отправить приглашение",
+  "SendInvite": "Отправить приглашение",
   "Close": "Закрыть"
 }
