--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/addPeople.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/addPeople.json
@@ -10,5 +10,11 @@
   "Less": "Меньше",
   "AnotherPeople": "Другие пользователи",
   "SendInvite": "Отправить приглашение",
-  "Close": "Закрыть"
+  "Close": "Закрыть",
+  "InvitePeople": "Добавить пользователей",
+  "Empty": "Пусто",
+  "ShowSearchPeople": "Показать поиск пользователей",
+  "HideSearchPeople": "Скрыть поиск пользователей",
+  "Clean": "Очистить",
+  "TypeUsername": "Имя пользователя"
 }
