--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/community/communityMembers.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/community/communityMembers.json
@@ -1,5 +1,7 @@
 {
   "Members": "Members",
   "Settings": "Settings",
-  "AddNewPeople": "Add new people"
+  "AddNewPeople": "Add new people",
+  "Invite": "Invite",
+  "Cancel": "Cancel"
 }
