--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/communityMembers.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/communityMembers.json
@@ -1,5 +1,7 @@
 {
   "Members": "Участники",
   "Settings": "Настройки",
-  "AddNewPeople": "Добавить нового пользователя"
+  "AddNewPeople": "Добавить нового пользователя",
+  "Invite": "Пригласить",
+  "Cancel": "Отмена"
 }
