Update remove from users from groupChat

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/groupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/groupChat.json
@@ -10,5 +10,6 @@
   "RomeFromChat": "Remove from chat",
   "Leave": "Leave",
   "Close": "Close",
-  "Cancel": "Cancel"
+  "Cancel": "Cancel",
+  "Accept": "Accept"
 }
