--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/groupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/groupChat.json
@@ -10,5 +10,6 @@
   "RomeFromChat": "Удалить из чата",
   "Leave": "Уйти",
   "Close": "Закрыть",
-  "Cancel": "Отмена"
+  "Cancel": "Отмена",
+  "Accept": "Подтвердить"
 }
