--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/community/communityMembers.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/community/communityMembers.json
@@ -3,5 +3,6 @@
   "Settings": "Settings",
   "AddNewPeople": "Add new people",
   "Invite": "Invite",
-  "Cancel": "Cancel"
+  "Cancel": "Cancel",
+  "RemovePeople": "Remove people from community"
 }
