--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/community/selectedCommunity.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/community/selectedCommunity.json
@@ -19,5 +19,6 @@
   "Create": "Create",
   "Discussions": "Discussions",
   "Friends": "Friends",
-  "Contacts": "Contacts"
+  "Contacts": "Contacts",
+  "Menu": "Menu"
 }
