--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/createGroupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/createGroupChat.json
@@ -20,5 +20,12 @@
   "PinMessage": "Кто может закреплять сообщения?",
   "Announcements": "Кто может делать анонсы?",
   "Anyone": "Любой",
-  "SpecialPeople": "Отдельные пользователи"
+  "SpecialPeople": "Отдельные пользователи",
+  "Main": "Общее",
+  "Members": "Участники",
+  "Permisions": "Доступ",
+  "Update": "Обновить",
+  "Apply": "Применить",
+  "NextStep": "Следующий шаг",
+  "PrevioslyStep": "Предыдущий шаг"
 }
