--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/communityMemberItem.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/communityMemberItem.json
@@ -2,6 +2,6 @@
   "RemovePerson": "Удалить пользователя",
   "RemovePeopleAlertStart": "Вы уверены, что хотите удалить пользователя",
   "RemovePeopleAlertFinish": "из сообщества",
-  "Remove": "Удалить",
+  "Remove": "Исключить",
   "Cancel": "Отмена"
 }
