--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/communityMembers.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/communityMembers.json
@@ -3,5 +3,6 @@
   "Settings": "Настройки",
   "AddNewPeople": "Добавить нового пользователя",
   "Invite": "Пригласить",
-  "Cancel": "Отмена"
+  "Cancel": "Отмена",
+  "RemovePeople": "Исключить из сообщества"
 }
