--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/selectedCommunity.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/selectedCommunity.json
@@ -19,5 +19,6 @@
   "Create": "Создать",
   "Discussions": "Обсуждения",
   "Friends": "Друзья",
-  "Contacts": "Контакты"
+  "Contacts": "Контакты",
+  "Menu": "Меню"
 }
