Update People section
In People section were added new actions:
 - invite to community: now users can send invite to community from People section;
- update request to connect: now users can see, if they already snet request to connect or people already frined

Fix issues for Community menu section.

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/addPeople.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/addPeople.json
@@ -1,6 +1,8 @@
 {
   "SearchPeople": "Search people",
   "SentInvite": "You sent invite to",
+  "SendInvite": "Send invite",
+  "CancelRequest": "Cancel request",
   "Friends": "Friends",
   "Hide": "Hide",
   "Show": "Show",
@@ -9,7 +11,6 @@
   "More": "More",
   "Less": "Less",
   "AnotherPeople": "Another people",
-  "SendInvite": "Send invite",
   "Close": "Close",
   "InvitePeople": "Invite people",
   "Empty": "Empty",
