--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/addPeople.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/addPeople.json
@@ -1,6 +1,8 @@
 {
   "SearchPeople": "Поиск пользователей",
   "SentInvite": "Вы отправили приглашение",
+  "SendInvite": "Отправить приглашение",
+  "CancelRequest": "Отменить приглашение",
   "Friends": "Друзья",
   "Hide": "Скрыть",
   "Show": "Показать",
@@ -9,7 +11,6 @@
   "More": "Больше",
   "Less": "Меньше",
   "AnotherPeople": "Другие пользователи",
-  "SendInvite": "Отправить приглашение",
   "Close": "Закрыть",
   "InvitePeople": "Добавить пользователей",
   "Empty": "Пусто",
