Fix make Invite to community

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/communityMenu.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/communityMenu.json
@@ -10,5 +10,7 @@
   "Cancel": "Отмена",
   "LeaveConfirm": "Вы уверены, что хотите выйти из сообщества",
   "LeaveOwnerConfirm": "ВНИМАНИЕ: Вы являетесь создателем сообщества и если выйдите, сообщество будет удалено со всеми данными. Все данные будут удалены безвозвратно!!!",
-  "LeaveAlert": "Выход из сообщества"
+  "LeaveAlert": "Выход из сообщества",
+  "InviteSuccess": "Приглашение отправлено",
+  "InviteFailed": "Что-то пошло не так. Приглашение не отправлено"
 }
