--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/community/communityMenu.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/community/communityMenu.json
@@ -10,5 +10,7 @@
   "Cancel": "Cancel",
   "LeaveConfirm": "You sure, that you want to leave from community",
   "LeaveOwnerConfirm": "DANGER: You are owner of this community and if you leave this community will be removed. All content will be removed and can't be restored in future!!!",
-  "LeaveAlert": "You want to leave"
+  "LeaveAlert": "You want to leave",
+  "InviteSuccess": "Invites sent success",
+  "InviteFailed": "Someting wrong. Invites didn't sent"
 }
