Add show short information abou user

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/community/communityMemberItem.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/community/communityMemberItem.json
@@ -3,5 +3,6 @@
   "RemovePeopleAlertStart": "You sure, that you want to remove user",
   "RemovePeopleAlertFinish": "from community",
   "Remove": "Remove",
-  "Cancel": "Cancel"
+  "Cancel": "Cancel",
+  "Information": "Informaion"
 }
