--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/communityMemberItem.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/communityMemberItem.json
@@ -3,5 +3,6 @@
   "RemovePeopleAlertStart": "Вы уверены, что хотите удалить пользователя",
   "RemovePeopleAlertFinish": "из сообщества",
   "Remove": "Исключить",
-  "Cancel": "Отмена"
+  "Cancel": "Отмена",
+  "Information": "Информация"
 }
