Fix make request to connect

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/userInformation.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/userInformation.json
@@ -5,5 +5,11 @@
   "AboutMe": "About me",
   "Friends": "Friends",
   "Communities": "Communities",
-  "MoreDetails": "More details"
+  "MoreDetails": "More details",
+  "RequestToConnect": "Request to connect",
+  "InviteToCommunity": "Invite to community",
+  "StartChat": "Start chat",
+  "AlreadyFriend": "This user already your friend",
+  "SentRequest": "You sent request to connect to ",
+  "AlreadySentRequest": "You already sent request to "
 }
