--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/userInformation.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/userInformation.json
@@ -5,5 +5,11 @@
   "AboutMe": "Обо мне",
   "Friends": "Друзья",
   "Communities": "Сообщества",
-  "MoreDetails": "Подробнее"
+  "MoreDetails": "Подробнее",
+  "StartChat": "Начать общение",
+  "RequestToConnect": "Запрос на дружбу",
+  "InviteToCommunity": "Пригласить в сообщество",
+  "AlreadyFriend": "Этот пользователь уже ваш друг",
+  "SentRequest": "Вы отправили запрос ",
+  "AlreadySentRequest": "Вы уже отправили запрос "
 }
