Add message status
Now users can check status of message in chats:
 - delivery: message will delivery to target chat;
 - delivered: message aready delivered to target chat;
 - red: message already red people from target chat.

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/chatMessage.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/chatMessage.json
@@ -4,5 +4,8 @@
   "CloseMenu": "Close menu",
   "AreYouSure": "Are you sure?",
   "Cancel": "Cancel",
-  "Save": "Save"
+  "Save": "Save",
+  "Delivery": "Message delivery",
+  "Delivered": "Message delivered",
+  "Read": "Message read"
 }
