--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/chatMessage.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/chatMessage.json
@@ -4,5 +4,8 @@
   "CloseMenu": "Закрыть меню",
   "AreYouSure": "Вы уверены?",
   "Cancel": "Отмена",
-  "Save": "Сохранить"
+  "Save": "Сохранить",
+  "Delivery": "Сообщение отправляется",
+  "Delivered": "Сообщение отправлено",
+  "Read": "Сообщение прочитано"
 }
