Add chat message count
Now users can see how mane messages they didn't read in chats. Its will be indicate a number of unread message, special icon around message and will have special background

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/account/registration.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/account/registration.json
@@ -4,5 +4,6 @@
   "CheckMeOut": "Check me out",
   "EmailExist": "This Email already reg!",
   "Registration": "Registration",
-  "Username": "Username"
+  "Username": "Username",
+  "RememberMe": "Don't logout"
 }
