--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/account/registration.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/account/registration.json
@@ -4,5 +4,6 @@
   "CheckMeOut": "Оставаться в системе",
   "EmailExist": "Такой Email уже зарегистрирован!",
   "Registration": "Регистрация",
-  "Username": "Имя пользователя"
+  "Username": "Имя пользователя",
+  "RememberMe": "Запомнить меня"
 }
