Add new features
Now users can:
 - update name of group chat;
 - update name of community;
 - update description of commuity.

Also, wass added alert: when user want to remove group or personal chat will be open popup to cinfirm your action

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/groupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/groupChat.json
@@ -1,5 +1,11 @@
 {
+  "AreYouSureRemoveChat": "Are you sure that you want to remove this chat?",
+  "ThatWillBeRemoveChat": "That's remove all messages and documents!",
+  "Remove": "Remove",
+  "Cancel": "Cancel",
   "Settings": "Settings",
+  "EditName": "Edit group name",
+  "Save": "Save changes",
   "Members": "Members",
   "Invite": "Invite",
   "Documents": "Documents",
