--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/groupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/groupChat.json
@@ -1,5 +1,11 @@
 {
+  "AreYouSureRemoveChat": "Вы уверены, что хотите удалить чат?",
+  "ThatWillBeRemoveChat": "Будут удалены все сообщения и документы!",
+  "Remove": "Удалить",
+  "Cancel": "Отмена",
   "Settings": "Настройки",
+  "EditName": "Редактировать название чата",
+  "Save": "Сохранить изменения",
   "Members": "Участники",
   "Invite": "Пригласить",
   "Documents": "Документы",
