--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/selectedCommunity.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/selectedCommunity.json
@@ -1,5 +1,8 @@
 {
   "Open": "Открытое",
+  "EditName": "Редактировать название сообщества",
+  "EditDescription": "Редактировать описание сообщества",
+  "Save": "Сохранить изменения",
   "OpenExplain": "Любой пользователь свободно может присоединяться к этому сообществу",
   "Private": "Закрытое",
   "PrivateExplain": "Пользователи могут быть приглашены в это сообщество только участниками сообщества",
