--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/personalChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/personalChat.json
@@ -1,5 +1,9 @@
 {
-  "LeaveFromChat": "Leave from chat",
+  "AreYouSureRemoveChat": "Are you sure that you want to remove this chat?",
+  "ThatWillBeRemoveChat": "That's remove all messages and documents!",
+  "Remove": "Remove",
+  "Cancel": "Cancel",
+  "RemoveChat": "Remove chat",
   "SendMessage": "Send message",
   "TypeYourMessage": "Type your message"
 }
