--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/personalChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/personalChat.json
@@ -1,5 +1,9 @@
 {
-  "LeaveFromChat": "Выйти из чата",
+  "AreYouSureRemoveChat": "Вы уверены, что хотите удалить чат?",
+  "ThatWillBeRemoveChat": "Будут удалены все сообщения и документы!",
+  "Remove": "Удалить",
+  "Cancel": "Отмена",
+  "RemoveChat": "Удалить чат",
   "SendMessage": "Отправить сообщение",
   "TypeYourMessage": "Напишите ваше сообщение"
 }
