--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/groupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/groupChat.json
@@ -1,8 +1,6 @@
 {
   "AreYouSureRemoveChat": "Вы уверены, что хотите удалить чат?",
   "ThatWillBeRemoveChat": "Будут удалены все сообщения и документы!",
-  "Remove": "Удалить",
-  "Cancel": "Отмена",
   "Settings": "Настройки",
   "EditName": "Редактировать название чата",
   "Save": "Сохранить изменения",
@@ -15,7 +13,5 @@
   "RemoveChat": "Удалить чат",
   "RomeFromChat": "Удалить из чата",
   "Leave": "Уйти",
-  "Close": "Закрыть",
-  "Cancel": "Отмена",
-  "Accept": "Подтвердить"
+  "Cancel": "Отмена"
 }
