Add rules for group chats

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/groupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/groupChat.json
@@ -13,5 +13,7 @@
   "RemoveChat": "Remove chat",
   "RomeFromChat": "Remove from chat",
   "Leave": "Leave",
-  "Cancel": "Cancel"
+  "Cancel": "Cancel",
+  "Rules": "Rules",
+  "SaveChanges": "Save"
 }
