--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/create.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/create.json
@@ -19,7 +19,7 @@
   "PinMessage": "Who can pin message?",
   "Announcements": "Who can make announcements?",
   "Anyone": "Anyone",
-  "SpecialPeople": "Special people",
+  "Owner": "Chat owner",
   "Main": "Main",
   "Members": "Members",
   "Permisions": "Permisions",
