--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/groupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/groupChat.json
@@ -13,5 +13,7 @@
   "RemoveChat": "Удалить чат",
   "RomeFromChat": "Удалить из чата",
   "Leave": "Уйти",
-  "Cancel": "Отмена"
+  "Cancel": "Отмена",
+  "Rules": "Правила",
+  "SaveChanges": "Сохранить"
 }
