--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/create.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/create.json
@@ -19,7 +19,7 @@
   "PinMessage": "Кто может закреплять сообщения?",
   "Announcements": "Кто может делать анонсы?",
   "Anyone": "Любой",
-  "SpecialPeople": "Отдельные пользователи",
+  "Owner": "Владелец чата",
   "Main": "Общее",
   "Members": "Участники",
   "Permisions": "Доступ",
