Add Community discussion

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/create.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/create.json
@@ -5,6 +5,7 @@
   "ChatPolicy": "Политика чата",
   "Public": "Открытый",
   "Private": "Закрытый",
+  "TypeOfCommunity": "Тип сообщества",
   "PrivateWithLink": "Закрытый (с ссылкой)",
   "Create": "Создать",
   "Close": "Закрыть",
