--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/create.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/create.json
@@ -5,6 +5,7 @@
   "ChatPolicy": "Chat policy",
   "Public": "Public",
   "Private": "Private",
+  "TypeOfCommunity": "Type of community",
   "PrivateWithLink": "Private (with link)",
   "Create": "Create",
   "Close": "Close",
